--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ ORDEN PARA PONER LAS REGLAS DE CSS:
   /* COLORES */
   --primary-color: #333;
   --secundary-color: #ccc;
+  --white: #fff;
   /* FUENTES */
   --principal-font: sans-serif;
   --secundary-font: sans-serif;
@@ -30,4 +31,88 @@ ul,
 ol {
   list-style: none;
 }
+
 /*/////////////////////////*/
+header {
+  background-color: darkorchid;
+  position: relative;
+}
+.header-main {
+  width: 100%;
+  height: 50px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 1rem;
+
+  background-color: var(--primary-color);
+  color: var(--white);
+}
+.logo {
+  color: var(--white);
+}
+/* ///////////////////////// */
+.contenedor-links {
+  display: flex;
+  /* background-color: crimson; */
+}
+.contenedor-links:hover .links {
+  display: flex;
+}
+/* ///////////////////////// */
+.icono {
+  flex-direction: column;
+  justify-content: space-between;
+
+  width: 3rem;
+  height: 3rem;
+
+  display: flex;
+}
+.icono div {
+  background-color: rgb(255, 255, 255);
+  height: 0.3rem;
+  width: 100%;
+}
+/* ///////////////////////// */
+.links {
+  background-color: #444;
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  height: 100vh;
+  width: 180px;
+
+  display: none;
+  flex-direction: column;
+
+  gap: 20px;
+  padding: 20px;
+}
+.links a {
+  color: white;
+  text-decoration: none;
+}
+.links a:hover {
+  color: rgb(185, 185, 185);
+}
+/* ///////////////////////// */
+@media (min-width: 350px) {
+  .icono {
+    display: none;
+  }
+  .links {
+    display: flex;
+    flex-direction: row;
+    position: initial;
+
+    height: max-content;
+    width: auto;
+    padding: 0;
+
+    background-color: rgba(127, 255, 212, 0);
+  }
+}
