--- a/css/login-style.css
+++ b/css/login-style.css
@@ -146,11 +146,12 @@ button:hover {
 
 
 /* ELIMINA EL FONDO AMARILLO MOLESTO */
-
+/* 
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px lightcyan inset;
 }
 
 input:active:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px lightcyan inset;
-}
+} */
+
