--- a/css/bloc-css/bloc-style.css
+++ b/css/bloc-css/bloc-style.css
@@ -41,7 +41,9 @@ ol {
 }
 
 body{
-  background-color: #fff52d;
+  background-image: linear-gradient(rgba(105,67,0,0.1) 0%,transparent 5.5%),url(https://www.memonotepad.com/img/wood.png);
+  background-repeat: no-repeat,repeat;
+  background-size: auto,400px 400px;
 }
 
 /*/////////////////////////*/
@@ -52,6 +54,7 @@ body{
 
 }
 .section__header--bloc{
+  margin-top: 1rem;
   width: 100%;
   height: 40px;
   display: flex;
@@ -69,10 +72,11 @@ body{
   border: none;
   border-bottom: 1px solid black;
   outline: none;
+  font-size:2rem;
 }
 .titulo--bloc input::selection{
-  color: var(--secundary-color);
-  background-color: var(--secundary-color);
+  color:  var(--secundary-color);
+  background-color: var(--primary-color);
 }
 .button__header--guardar{
   width: 70px;
@@ -86,30 +90,53 @@ body{
 
 .textarea-bloc{
   width: 100%;
-  height: calc(100vh - 92px);
+  height: calc(100vh - 200px);
   padding: 1rem;
   color: white;
   background-color: #374955;
-
+  cursor: text;
+  outline: none;
+  box-shadow: 6px 12px 14px 0px rgba(0,0,0,0.5);
+  border-radius: 0 25px 25px 0;
 }
 .textarea-bloc::selection{
-  color: var(--secundary-color);
-  background-color: var(--secundary-color);
+  color:  var(--secundary-color);
+  background-color: var(--primary-color);
 }
-.activar{
-  background-color: wheat;
+.fa-pen{
+  font-size: 2.1rem;
+  margin-left: 1rem;
 }
+.bloc__textContainer{
+  display: flex;
+  flex-direction: row;
+  margin-top: 3rem;
+}
+.textarea-bloc--after{
+  width: 30px;
+  background-color: #374955;
+  margin-left: 1rem;
+  border-radius:  25px 0  0 25px;
+  box-shadow: -14px 6px 17px 0px rgba(0,0,0,0.4);
 
-
-
-
-
+}
+.bloc__textContainer p{
+  width: 0;
+  border: 1px solid red;
+}
 
 
 
 
 @media screen and ( min-width: 735px ) {
   .textarea-bloc{
-    width: 80%;
+    width: 75%;
+  }
+  .textarea-bloc--after{
+    margin-left: 3rem; 
+  }
+  .fa-pen{
+    font-size: 2.1rem;
+    margin-left: 3rem;
   }
 }
