--- a/css/bloc-css/bloc-style.css
+++ b/css/bloc-css/bloc-style.css
@@ -1,4 +1,5 @@
 @import url("/css/bloc-css/header-block.css");
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 /* 
 ORDEN PARA PONER LAS REGLAS DE CSS:
   1. POSICIONAMIENTO --> static, absolute, relative, fixed
@@ -98,6 +99,8 @@ body{
   outline: none;
   box-shadow: 6px 12px 14px 0px rgba(0,0,0,0.5);
   border-radius: 0 25px 25px 0;
+  font-family: 'Amatic SC', cursive;
+  font-size: 2.4rem;  
 }
 .textarea-bloc::selection{
   color:  var(--secundary-color);
@@ -110,6 +113,7 @@ body{
 .bloc__textContainer{
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin-top: 3rem;
 }
 .textarea-bloc--after{
@@ -130,10 +134,12 @@ body{
 
 @media screen and ( min-width: 735px ) {
   .textarea-bloc{
-    width: 75%;
+    width: 60%;
+    font-size: 2.5rem;
   }
   .textarea-bloc--after{
-    margin-left: 3rem; 
+    margin-left: 3rem;
+    width: 50px;
   }
   .fa-pen{
     font-size: 2.1rem;
