--- a/css/bloc-css/bloc-style.css
+++ b/css/bloc-css/bloc-style.css
@@ -1,4 +1,4 @@
-@import url("./header-block.css");
+@import url("header-block.css");
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 /* 
 ORDEN PARA PONER LAS REGLAS DE CSS:
