--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ ol {
 
 body {
   background-color: #fff52d;
+  background: linear-gradient(yellow, orange);
+  height: 100vh;
 }
 
 /*/////////////////////////*/
@@ -170,4 +172,50 @@ a:hover {
 }
 .link-bloc {
   color: black;
+}
+
+.boton-new {
+  background-color: #ffb2f5;
+  padding: 10px 15px;
+  border-radius: 5px;
+  margin: 10px;
+  border: none;
+  border: 3px solid black;
+  font-size: 20px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: white;
+  background-color: #4d3dc4;
+}
+.boton-new:hover {
+  background-color: #706691;
+}
+
+.contenedor-archivos {
+  background-color: rgb(255, 173, 173);
+  background: linear-gradient(#a18cd1, #fbc2eb);
+  width: max-content;
+  height: max-content;
+  margin-left: 10px;
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.103);
+}
+.contenedor-archivos > div {
+  background-color: rgb(255, 152, 152);
+  background-color: white;
+  border: 3px solid black;
+  /* background: linear-gradient(white, rgb(195, 195, 195)); */
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+}
+.contenedor-archivos > div a {
+  color: black;
+  font-weight: 600;
+  font-size: 20px;
 }
