--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,9 @@ ol {
 }
 
 body {
-  background-color: #fff52d;
-  background: linear-gradient(yellow, orange);
+  /* background-color: #fff52d; */
+  /* background: linear-gradient(yellow, orange); */
+  /* background-color: #191919; */
   height: 100vh;
 }
 
@@ -185,12 +186,31 @@ a:hover {
   margin-bottom: 15px;
   font-weight: bold;
   color: white;
-  background-color: #4d3dc4;
+  background-color: rgb(67, 189, 255);
+  color: black;
+  position: relative;
 }
 .boton-new:hover {
-  background-color: #706691;
+  background-color: #4d3dc4;
+  color: white;
 }
-
+.boton-new:hover {
+  animation: darlavuelta infinite 1s;
+}
+.boton-new span {
+  background-color: coral;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+}
+@keyframes darlavuelta {
+  from {
+    background-color: aqua;
+  }
+  to {
+    background-color: #ff95f1;
+  }
+}
 .contenedor-archivos {
   background-color: rgb(255, 173, 173);
   background: linear-gradient(#a18cd1, #fbc2eb);
@@ -218,4 +238,46 @@ a:hover {
   color: black;
   font-weight: 600;
   font-size: 20px;
+}
+
+.rainbow-button {
+  margin: 20px 10px;
+  width: 215px;
+  height: 55px;
+  background: radial-gradient(red, rgb(169, 169, 255));
+  background-image: linear-gradient(
+    90deg,
+    hsl(179, 100%, 75%),
+    #ff9fb7,
+    #ffeb85 0%,
+    #a7ff7b 49%,
+    #7bf1a8 80%,
+    #226f54 100%
+  );
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+.rainbow-button:after {
+  content: attr(alt);
+  width: 200px;
+  height: 40px;
+  background-color: #191919;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rainbow-button:hover {
+  animation: slidebg 2s linear alternate infinite;
+}
+
+@keyframes slidebg {
+  to {
+    background-position: 20vw;
+    transform: rotateZ(0deg);
+  }
 }
