Anadido el fondo amarillo al index.html

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ ol {
 }
 
 body {
-  /* background-color: #fff52d; */
+  background-color: #fff52d;
   /* background: linear-gradient(yellow, orange); */
   /* background-color: #191919; */
   height: 100vh;
